--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="software.pipas.feupstudents.MainActivity">
+    tools:context="software.pipas.feupstudents.MainActivity"
+    android:background="@color/md_white_1000">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -18,6 +19,23 @@
         android:theme="@style/ToolbarTheme"
         android:elevation="4dp">
     </android.support.v7.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:id="@+id/removeBookmark"
+        android:layout_alignParentRight="true"
+        android:elevation="4dp"
+        android:clickable="true">
+
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_close"
+            android:tint="@color/md_white_1000" />
+
+    </RelativeLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
