--- a/app/src/main/assets/leftBar.css
+++ b/app/src/main/assets/leftBar.css
@@ -40,6 +40,7 @@ div#caixa-validacao-cabecalho {
     font-size: 24px !important;
     height: 56px;
     line-height: 46.4px;
+    border-bottom: 1px solid #d7d7d7;
 }
 
 div#caixa-validacao-conteudo {
